--- a/apps/lang/portugues-brasileiro.lang
+++ b/apps/lang/portugues-brasileiro.lang
@@ -12328,3 +12328,54 @@
     speaker: "Habilitar Auto-Falante"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_MODE
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Mode"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Modo Touchscreen"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Modo Touchscreen"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_GRID
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "3x3 Grid"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Grade 3x3"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Grade 3 por 3"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_POINT
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Absolute Point"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Ponto Absoluto"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Ponto Absoluto"
+  </voice>
+</phrase>
