--- a/apps/lang/dansk.lang
+++ b/apps/lang/dansk.lang
@@ -1061,15 +1061,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "Bip lydstyrke"
+    swcodec: "Bip ved sangskift"
   </dest>
   <voice>
     *: none
-    swcodec: "Bip lydstyrke"
+    swcodec: "Bip ved sangskift"
   </voice>
 </phrase>
 <phrase>
@@ -10557,20 +10557,17 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "SPIL = Ja"
     h100,h120,h300: "NAVI = Ja"
-    ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "VÆLG = Ja"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "VÆLG = Ja"
     player: "(SPIL/STOP)"
   </dest>
   <voice>
     *: ""
-    h100,h120,h300: ""
-    ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: ""
-    player: ""
   </voice>
 </phrase>
 <phrase>
@@ -12366,5 +12363,70 @@
   </dest>
   <voice>
     *: "Som individuelle cifre"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Track Skipping"
+  </source>
+  <dest>
+    *: "Forhindr sangskift"
+  </dest>
+  <voice>
+    *: "Forhindr sangskift"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_POINT
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Absolute Point"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Absolut punkt"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Absolut punkt"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_GRID
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "3x3 Grid"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "3x3 net"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "3 gange 3 net"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_MODE
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Mode"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Trykfølsom skærm"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Trykfølsom skærm"
   </voice>
 </phrase>
