Apply r21086 to all languages. In the future, please use tools/langtool.pl for such changes (the command used in this case was: tools/langtool.pl --changetarget --from "ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200" --to "yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200" --id LANG_CONFIRM_WITH_BUTTON --inplace apps/lang/*.lang).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21219 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/czech.lang
+++ b/apps/lang/czech.lang
@@ -263,13 +263,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Ano"
     h100,h120,h300: "NAVI = Ano"
-    ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Ano"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Ano"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
