Used the wrong patch from FS#10062.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21220 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/portugues-brasileiro.lang
+++ b/apps/lang/portugues-brasileiro.lang
@@ -12379,3 +12379,17 @@
     touchscreen: "Ponto Absoluto"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Track Skipping"
+  </source>
+  <dest>
+    *: "Prevenir Pular Faixa"
+  </dest>
+  <voice>
+    *: "Prevenir Pular Faixa"
+  </voice>
+</phrase>
